<resources>
    <string name="app_name">TMade</string>
    <string name="title_activity_splash">title_activity_splash</string>
    <string name="tab_symbol_title">Symbol</string>
    <string name="tab_counter_title">Counter</string>
    <string name="tab_tutorial_title">Tutorial</string>
    <string name="tab_setting_title">Setting</string>
    <string name="symbol_detail_title">Detail</string>
    <string name="basic_stitches">Basic stitches</string>
    <string name="puff_stitches">Puff stitch - Popcorn stitch</string>
    <string name="increases_stitches">Increases stitches</string>
    <string name="decreases_stitches">Decreases stitches</string>
    <string name="blo_flo_stitches">BLO &amp; FLO stitches</string>
    <string name="update_text">Updating…</string>
    <string name="step_text">Step </string>
    <string name="watch_video_text">Watch video</string>
    <string-array name="language_names">
        <item>@string/language_vietnamese</item>
        <item>@string/language_english</item>
    </string-array>
    <string-array name="language_codes">
        <item>@string/language_vietnamese_code</item>
        <item>@string/language_english_code</item>
    </string-array>
    <string name="language_english" translatable="false">English</string>
    <string name="language_vietnamese" translatable="false">Tiếng Việt</string>
    <string name="language_english_code" translatable="false">en</string>
    <string name="language_vietnamese_code" translatable="false">vi</string>
    <string name="stitch_slip_knot_crochet_name">Slip knot</string>
    <string name="stitch_slip_knot_crochet_description">Trong các hướng dẫn của chart móc thì mũi gút(slip knot) thường không được viết và chúng không tính là mũi đầu tiên.Trong các hướng dẫn của chart móc thì mũi gút(slip knot) thường không được viết và chúng không tính là mũi đầu tiên.</string>
    <string name="stitch_slip_knot_crochet_content_1">To make a starting loop - fold the yarn to make a loop.</string>
    <string name="stitch_slip_knot_crochet_content_2">Catch the yarn through the loop.</string>
    <string name="stitch_slip_knot_crochet_content_3">Pull it through.</string>
    <string name="stitch_slip_knot_crochet_content_4">Pull the ends to tighten the slipknot. Now put this slipknot on the left hand needle.</string>
    <string name="stitch_slip_stitch_crochet_name">Slip stitch</string>
    <string name="stitch_slip_stitch_crochet_description"> </string>
    <string name="stitch_slip_stitch_crochet_content_1">With yarn in back.</string>
    <string name="stitch_slip_stitch_crochet_content_2">Yarn over hook and draw through.</string>
    <string name="stitch_slip_stitch_crochet_content_3">1 slip stitch done. Insert hook into the next st.</string>
    <string name="stitch_slip_stitch_crochet_content_4">Repeat these steps to continue slip stitch.</string>
    <string name="stitch_chain_crochet_name">Chain</string>
    <string name="stitch_chain_crochet_description"> </string>
    <string name="stitch_chain_crochet_content_1">With hook behind yarn.</string>
    <string name="stitch_chain_crochet_content_2">Using left thumb and middle finger.</string>
    <string name="stitch_chain_crochet_content_3">Draw yarn through loop.</string>
    <string name="stitch_chain_crochet_content_4">3 sts worked. Continue working the required number of sts (by counting sts made below hook).</string>
    <string name="stitch_single_crochet_name">Single</string>
    <string name="stitch_single_crochet_description"> </string>
    <string name="stitch_single_crochet_content_1">Insert hook into the back loop of chain st.</string>
    <string name="stitch_single_crochet_content_2">Yarn over hook as shown from back to front and draw through loop.</string>
    <string name="stitch_single_crochet_content_3">Yarn over hook again and draw through both loops on hook.</string>
    <string name="stitch_single_crochet_content_4">1sc (single crochet) done.</string>
    <string name="stitch_half_double_crochet_name">Half double</string>
    <string name="stitch_half_double_crochet_description"> </string>
    <string name="stitch_half_double_crochet_content_1">Yarn over hook and insert hook into the back loop of chain st.</string>
    <string name="stitch_half_double_crochet_content_2">Yarn over hook and draw through loop as shown.</string>
    <string name="stitch_half_double_crochet_content_3">Yarn over hook again and draw through all three loops on hook.</string>
    <string name="stitch_half_double_crochet_content_4">1hdc (half - double crochet) done.</string>
    <string name="stitch_double_crochet_name">Double</string>
    <string name="stitch_double_crochet_description"> </string>
    <string name="stitch_double_crochet_content_1">Yarn over hook and insert hook into the back loop of chain st.</string>
    <string name="stitch_double_crochet_content_2">Yarn over hook and draw through loop as shown.</string>
    <string name="stitch_double_crochet_content_3">Yarn over hook again and draw through two loops on hook.</string>
    <string name="stitch_double_crochet_content_4">Yarn over hook once more and draw through remaining two loops on hook.</string>
    <string name="stitch_double_crochet_content_5">1dc (double crochet) done.</string>
    <string name="stitch_triple_crochet_name">Triple</string>
    <string name="stitch_triple_crochet_description"> </string>
    <string name="stitch_triple_crochet_content_1">Yarn over hook twice and insert hook into the back loop of chain st.</string>
    <string name="stitch_triple_crochet_content_2">Yarn over hook and draw through loop.</string>
    <string name="stitch_triple_crochet_content_3">Yarn over hook and draw through first twoo loops on hook.</string>
    <string name="stitch_triple_crochet_content_4">Yarn over hook and draw through first two loops on hook two more times.</string>
    <string name="stitch_triple_crochet_content_5">1tr (triple crochet) done.</string>
    <string name="stitch_double_triple_crochet_name">Double triple</string>
    <string name="stitch_double_triple_crochet_description"> </string>
    <string name="stitch_double_triple_crochet_content_1">Wrap yarn around hook three times and insert hook into the back loop of chain st.</string>
    <string name="stitch_double_triple_crochet_content_2">Yarn over hook and draw through loop.</string>
    <string name="stitch_double_triple_crochet_content_3">Yarn over hook again and draw through first two loops on hook.</string>
    <string name="stitch_double_triple_crochet_content_4">Repeat the previous step three more times.</string>
    <string name="stitch_double_triple_crochet_content_5">1dtr (double-triple crochet) done.</string>
    <string name="stitch_hdc3tog_into_same_st_crochet_name">hdc3tog into same st</string>
    <string name="stitch_hdc3tog_into_same_st_crochet_description"> </string>
    <string name="stitch_hdc3tog_into_same_st_crochet_content_1">Yarn over hook and insert hook into the back loop of chain st.</string>
    <string name="stitch_hdc3tog_into_same_st_crochet_content_2">Work an incomplete hdc. Work 2 more incomplete hdcs into the same st.</string>
    <string name="stitch_hdc3tog_into_same_st_crochet_content_3">Yarn over hook and draw through 7 loops on hook all at once.</string>
    <string name="stitch_hdc3tog_into_same_st_crochet_content_4">This completes as hdc3tog into same stitch.</string>
    <string name="stitch_dc3tog_into_same_st_crochet_name">dc3tog into same st</string>
    <string name="stitch_dc3tog_into_same_st_crochet_description"> </string>
    <string name="stitch_dc3tog_into_same_st_crochet_content_1">Yarn over hook and insert hook into the back loop of chain st.</string>
    <string name="stitch_dc3tog_into_same_st_crochet_content_2">Work an incomplete hdc. Work 2 more incomplete hdcs into the same st.</string>
    <string name="stitch_dc3tog_into_same_st_crochet_content_3">Yarn over hook and draw through 4 loops on hook all at once.</string>
    <string name="stitch_dc3tog_into_same_st_crochet_content_4">This completes as dc3tog into same stitch.</string>
    <string name="stitch_dc5tog_into_same_st_crochet_name">dc5tog into same st</string>
    <string name="stitch_dc5tog_into_same_st_crochet_description"> </string>
    <string name="stitch_dc5tog_into_same_st_crochet_content_1">Yarn over hook and insert hook into the back loop of chain st.</string>
    <string name="stitch_dc5tog_into_same_st_crochet_content_2">Work an incomplete hdc. Work 4 more incomplete hdcs into the same st.</string>
    <string name="stitch_dc5tog_into_same_st_crochet_content_3">Yarn over hook and draw through 6 loops on hook all at once.</string>
    <string name="stitch_dc5tog_into_same_st_crochet_content_4">This completes as dc5tog into same stitch.</string>
    <string name="stitch_2sc_into_same_st_crochet_name">2sc into same st</string>
    <string name="stitch_2sc_into_same_st_crochet_description"> </string>
    <string name="stitch_2sc_into_same_st_crochet_content_1">Work 1 sc into the top loops of st from the pre row.</string>
    <string name="stitch_2sc_into_same_st_crochet_content_2">Yarn over hook and draw through.</string>
    <string name="stitch_2sc_into_same_st_crochet_content_3">Work 1 more sc into the same st.</string>
    <string name="stitch_2sc_into_same_st_crochet_content_4">2sc worked into same st. 1 st increased.</string>
    <string name="stitch_1sc_1ch_1sc_crochet_name">(1sc-1ch-1sc) into same st</string>
    <string name="stitch_1sc_1ch_1sc_crochet_description"> </string>
    <string name="stitch_1sc_1ch_1sc_crochet_content_1">Work 1sc into the top loops of st from the pre row and yarn over hook.</string>
    <string name="stitch_1sc_1ch_1sc_crochet_content_2">Make 1 chain and then insert hook into the same st.</string>
    <string name="stitch_1sc_1ch_1sc_crochet_content_3">Draw through and work a sc.</string>
    <string name="stitch_1sc_1ch_1sc_crochet_content_4">2scs with 1ch worked into same st. 2sts increased.</string>
    <string name="stitch_3sc_into_same_st_crochet_name">3sc into same st</string>
    <string name="stitch_3sc_into_same_st_crochet_description"> </string>
    <string name="stitch_3sc_into_same_st_crochet_content_1">Work 1sc into the top loops of st from the pre row.</string>
    <string name="stitch_3sc_into_same_st_crochet_content_2">Work one more sc into the same st.</string>
    <string name="stitch_3sc_into_same_st_crochet_content_3">Work 1 more sc into the same st.</string>
    <string name="stitch_3sc_into_same_st_crochet_content_4">3sc worked into same st. 2 sts increased.</string>
    <string name="stitch_2hdcs_into_same_st_crochet_name">2hdcs into same st</string>
    <string name="stitch_2hdcs_into_same_st_crochet_description"> </string>
    <string name="stitch_2hdcs_into_same_st_crochet_content_1">Yarn over hook and insert hook into the back loop of chain st and draw through.</string>
    <string name="stitch_2hdcs_into_same_st_crochet_content_2">Work 1 hdc. Yarn over hook.</string>
    <string name="stitch_2hdcs_into_same_st_crochet_content_3">Work 1 more hdc into the same st.</string>
    <string name="stitch_2hdcs_into_same_st_crochet_content_4">2 hdcs worked into same st. 1 st increased.</string>
    <string name="stitch_3hdcs_into_same_st_crochet_name">3hdcs into same st</string>
    <string name="stitch_3hdcs_into_same_st_crochet_description"> </string>
    <string name="stitch_3hdcs_into_same_st_crochet_content_1">Work 1 hdc into the back loops of chain. Yarn over and insert hook into same st.</string>
    <string name="edit_counter_text">Edit</string>
    <string name="reset_counter_text">Reset</string>
    <string name="remove_title_sheet_text">Remove</string>
    <string name="cancel_title_sheet_text">Cancel</string>
    <string name="counter_add_title_text">Information</string>
    <string name="ok_btn_text">OK</string>
    <string name="cancel_btn_text">Cancel</string>
</resources>