<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_counter_bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/counter_layout_add_title_counter"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView android:id="@+id/add_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:text = "@string/counter_add_title_text"
            android:textSize="20sp"
            android:textStyle="normal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/counter_layout_add_text_field"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/counter_add_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="string/edit_text_hint"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />
        <requestFocus />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/counter_layout_add_button"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp">
        <Button
            android:id="@+id/counter_cancel_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn_text" />

        <Button
            android:id="@+id/counter_ok_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_btn_text" />
    </LinearLayout>
</LinearLayout>